Fix stretched app logo on website

--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -304,7 +304,7 @@ a.button {
             width: 50%;
             position:relative;
             padding-top: 0;
-
+            height: fit-content;
             img {
                 position: initial;
                 width: 100%;
